# Ai_engineer

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/router/: Authenticate.py  fetch_selected_repos.py  getRepoContent.py  getusersRepos.py  pending_routes.py  redirect_handler.py  selectRepo.py
backend/app/socket/: socket.py  workspace.py
backend/database/: db_init.py  pymongo_get_database.py
backend/intelligence/: System_p.md  ai_caller.py  register.py
backend/intelligence/agent/: agent.py  executor.py
backend/intelligence/memory/: remember.md
backend/intelligence/tools/: CloneRepo.py  Evaluate_tech_stack.py  build_prompt.py  fetch_Repo_tree.py  getrepo.py  readMemory.py  read_file_content.py  registery.py  writeMemory.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/contexts/: repoContext.tsx  workingFIles.tsx
frontend/editorComp/: CodeMirrorEditor.tsx
frontend/hooks/: fileEdit.ts
frontend/lib/: fileContent.ts
frontend/pages/: CodeEditor.tsx  HomeScreen.tsx
frontend/socket/: socket.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppHeader.tsx  Icon.tsx  PromptComposer.tsx  RepoDropdown.tsx  RepoListPop.tsx  Sidebar.tsx
frontend/src/components/editor/: AiChatPanel.tsx  CodePane.tsx  EditorHeader.tsx  EditorTabs.tsx  FileExplorer.tsx  ResizeHandle.tsx  TerminalPanel.tsx  WindowDots.tsx  editorData.ts
frontend/src/components/editor/icons/: Fileicon.tsx  FolderIcon.tsx
frontend/tools/: T_stack_tool.ts  tectstack.ts
