[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "python-socketio>=5.16.3",
    "uvicorn>=0.49.0",
]
